
@startuml HexagonalArchitecture
allowmixing

skinparam packageStyle rectangle
skinparam linetype ortho
skinparam componentStyle rectangle
skinparam arrowColor #555555
skinparam shadowing false

rectangle "Domain" {
  package "Core Models" {
    class Usuario
    class UsuarioId
    class Cliente
    class ClienteId
    class ClienteFiltro
    class Paginacao
    class "Pagina<T>"
  }

  package "Value Objects" {
    class Email
    class Cpf
  }
}

rectangle "Ports" {
  package "Input (port.in)" {
    interface LoginUseCase
    interface UsuarioServicePort
    interface BuscarClienteUseCase
    interface CategoriaUseCase
    interface GerarGraficoUseCase
    interface GerenciarTransacaoUseCase
  }
  package "Output (port.out)" {
    interface ClienteRepositoryPort
    interface GraficoRepositoryPort
    interface CategoriaRepositoryPort
    interface UsuarioRepositoryPort
    interface TokenServicePort
  }
}

rectangle "Application" {
  component "UsuarioService" as UsuarioAppService
  component "LoginServiceImpl" as LoginAppService
  component "BuscarClienteService" as BuscarClienteAppService
  component "CategoriaApplicationService" as CategoriaAppService
  component "TransacaoService" as TransacaoAppService
  component "GraficoService" as GraficoAppService
}

rectangle "Adapters IN (web)" {
  package "Controllers" {
    component CategoriaController
    component UsuarioController
    component GraficoController
    component TransacaoController
  }
  package "Web Services" {
    component CategoriaWebService
    component UsuarioWebService
  }
  package "Request/Response Mappers" {
    component CategoriaRequestMapper
    component CategoriaResponseMapper
    component UsuarioMapper
    component GraficoResponseMapper
    component ClienteFiltroMapper
    component TransacaoRequestMapper
  }
}

rectangle "Adapters OUT (persistence/integration)" {
  package "Persistence" {
    component CategoriaPersistenceAdapter
    component ClientePersistenceAdapter
    component TransacaoPersistenceAdapter
    component UsuarioPersistenceAdapter
    component GraficoPersistenceAdapter
  }
  package "Infrastructure Helpers" {
    component ClienteSpecificationBuilder
    component CategoriaJpaMapper
    component ClienteJpaMapper
    component UsuarioJpaMapper
    component TransacaoJpaMapper
  }
  package "External" {
    component JwtTokenService
    component SpringRepositories
  }
}

LoginAppService ..|> LoginUseCase
UsuarioAppService ..|> UsuarioServicePort
BuscarClienteAppService ..|> BuscarClienteUseCase
CategoriaAppService ..|> CategoriaUseCase
GraficoAppService ..|> GerarGraficoUseCase
TransacaoAppService ..|> GerenciarTransacaoUseCase

LoginAppService --> UsuarioRepositoryPort
LoginAppService --> TokenServicePort
UsuarioAppService --> UsuarioRepositoryPort
UsuarioAppService --> CategoriaRepositoryPort
UsuarioAppService --> ClienteRepositoryPort
BuscarClienteAppService --> ClienteRepositoryPort
CategoriaAppService --> CategoriaRepositoryPort
GraficoAppService --> GraficoRepositoryPort
TransacaoAppService --> GraficoRepositoryPort

CategoriaController --> CategoriaWebService
CategoriaWebService --> CategoriaAppService
CategoriaWebService --> CategoriaRequestMapper
CategoriaWebService --> CategoriaResponseMapper

UsuarioController --> UsuarioWebService
UsuarioWebService --> UsuarioAppService
UsuarioWebService --> LoginAppService
UsuarioWebService --> UsuarioMapper

GraficoController --> GraficoAppService
GraficoController --> GraficoResponseMapper

TransacaoController --> TransacaoAppService
TransacaoController --> TransacaoRequestMapper

ClienteFiltroMapper --> ClienteFiltro
UsuarioMapper --> Usuario
CategoriaRequestMapper --> ClienteFiltro
CategoriaResponseMapper --> Cliente

UserDetailsServiceImpl --> UsuarioServicePort
JwtTokenService ..|> TokenServicePort

ClientePersistenceAdapter ..|> ClienteRepositoryPort
ClientePersistenceAdapter --> ClienteSpecificationBuilder
ClientePersistenceAdapter --> ClienteJpaMapper
ClientePersistenceAdapter --> SpringRepositories
ClientePersistenceAdapter --> Pagina
ClientePersistenceAdapter --> ClienteFiltro
ClientePersistenceAdapter --> Paginacao

CategoriaPersistenceAdapter ..|> CategoriaRepositoryPort
CategoriaPersistenceAdapter --> CategoriaJpaMapper
CategoriaPersistenceAdapter --> SpringRepositories

UsuarioPersistenceAdapter ..|> UsuarioRepositoryPort
UsuarioPersistenceAdapter --> UsuarioJpaMapper
UsuarioPersistenceAdapter --> SpringRepositories

TransacaoPersistenceAdapter --> TransacaoJpaMapper
GraficoPersistenceAdapter ..|> GraficoRepositoryPort
GraficoPersistenceAdapter --> SpringRepositories

LoginUseCase --> Usuario
UsuarioServicePort --> Usuario
BuscarClienteUseCase --> Cliente
CategoriaUseCase --> Cliente
GerenciarTransacaoUseCase --> Cliente
GerarGraficoUseCase --> Cliente

@enduml
